RESOLVED FIXED114844
[BLACKBERRY]fixed debug broken from previous patch
https://bugs.webkit.org/show_bug.cgi?id=114844
Summary [BLACKBERRY]fixed debug broken from previous patch
xuefeiren
Reported 2013-04-18 18:51:36 PDT
Source/WebKit/blackberry/WebKitSupport/RenderQueue.cpp -void RenderQueue::scrollZoomJobsCompleted(const TileIndexList&, TileIndexList* completedJobs, bool shouldBlit) +void RenderQueue::scrollZoomJobsCompleted(const TileIndexList& outstandingJobs, TileIndexList* completedJobs, bool shouldBlit) { // Get rid of the completed list! ASSERT(outstandingJobs.isEmpty()); in previous patch, remove a useful parameter in debug build. so now fix it.
Attachments
fixed debug broken from previous patch (2.26 KB, patch)
2013-04-18 18:58 PDT, xuefeiren
benjamin: review-
benjamin: commit-queue-
remove warning (unused parameter ) in platform/graphics/blackberry (24.90 KB, patch)
2013-04-18 23:42 PDT, xuefeiren
no flags
fixed debug broken from previous patch (2.26 KB, patch)
2013-04-19 00:09 PDT, xuefeiren
no flags
fixed debug broken from previous patch (2.26 KB, patch)
2013-04-19 03:21 PDT, xuefeiren
no flags
fixed debug broken from previous patch (2.26 KB, patch)
2013-04-19 03:23 PDT, xuefeiren
no flags
xuefeiren
Comment 1 2013-04-18 18:58:03 PDT
Created attachment 198787 [details] fixed debug broken from previous patch fixed debug broken from previous patch
Benjamin Poulain
Comment 2 2013-04-18 22:22:44 PDT
Comment on attachment 198787 [details] fixed debug broken from previous patch View in context: https://bugs.webkit.org/attachment.cgi?id=198787&action=review > Source/WebKit/blackberry/ChangeLog:10 > + add missing parameter in > + Source/WebKit/blackberry/WebKitSupport/RenderQueue.cpp > + void RenderQueue::scrollZoomJobsCompleted add -> Add Remove those lines... > Source/WebKit/blackberry/ChangeLog:13 > + * WebKitSupport/RenderQueue.cpp: > + (BlackBerry::WebKit::RenderQueue::scrollZoomJobsCompleted): Add a short description here. > Source/WebKit/blackberry/WebKitSupport/RenderQueue.cpp:885 > ASSERT(outstandingJobs.isEmpty()); This should be ASSERT_UNUSED.
xuefeiren
Comment 3 2013-04-18 23:42:36 PDT
Created attachment 198811 [details] remove warning (unused parameter ) in platform/graphics/blackberry remove warning (unused parameter ) in platform/graphics/blackberry
xuefeiren
Comment 4 2013-04-19 00:09:32 PDT
Created attachment 198816 [details] fixed debug broken from previous patch add a parameter which was removed by mistake. now i need to fix it.
xuefeiren
Comment 5 2013-04-19 00:11:22 PDT
(In reply to comment #2) > This should be ASSERT_UNUSED. it is used in ASSERT(), and i removed it in r148677 by mistake. And it broke the debug build,so now I need to add it back.
xuefeiren
Comment 6 2013-04-19 03:21:15 PDT
Created attachment 198838 [details] fixed debug broken from previous patch fixed debug broken from previous patch
xuefeiren
Comment 7 2013-04-19 03:23:06 PDT
Created attachment 198839 [details] fixed debug broken from previous patch fixed debug broken from previous patch
Rob Buis
Comment 8 2013-04-19 04:06:19 PDT
Comment on attachment 198839 [details] fixed debug broken from previous patch Yes, we need this for Debug builds :) Thanks.
WebKit Commit Bot
Comment 9 2013-04-19 04:46:29 PDT
Comment on attachment 198839 [details] fixed debug broken from previous patch Clearing flags on attachment: 198839 Committed r148739: <http://trac.webkit.org/changeset/148739>
WebKit Commit Bot
Comment 10 2013-04-19 04:46:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.